--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -7,8 +7,8 @@
 /* CSS Custom Properties - Design Tokens */
 :root {
     /* Primary Colors */
-    --sp-primary: #0D6EFD;
-    --sp-primary-dark: #0b5ed7;
+    --sp-primary: #3FB6DC;
+    --sp-primary-dark: #3396B8;
     --sp-primary-teal: #22a7c0;
     --sp-primary-teal-dark: #1a8fa5;
     
