--- a/src/main/resources/templates/student-signup.html
+++ b/src/main/resources/templates/student-signup.html
@@ -44,7 +44,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                 </div>
 
                 <!-- Signup Form -->
-                <form th:action="@{/student-signup}" th:object="${student}" method="post">
+                <form id="signupForm" th:action="@{/student-signup}" th:object="${student}" method="post">
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     <div class="auth-form-floating">
                         <label for="name">Full Name</label>
@@ -62,7 +62,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" name="password" th:field="*{password}" placeholder="Create a password" required>
                     </div>
-                    <button type="submit" class="auth-btn">Sign Up</button>
+                    <button type="button" class="auth-btn" onclick="validateAndShowModal(event)">Sign Up</button>
                 </form>
 
                 <!-- Additional Links -->
@@ -72,5 +72,38 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
             </div>
         </div>
     </div>
+    
+    <!-- Terms & Privacy Modal -->
+    <div th:replace="~{fragments/terms-privacy-modal :: terms-privacy-modal}"></div>
+    
+    <div th:replace="~{fragments/common :: scripts}"></div>
+    
+    <script>
+    function validateAndShowModal(event) {
+        const form = document.getElementById('signupForm');
+        if (form.checkValidity()) {
+            event.preventDefault();
+            const modal = new bootstrap.Modal(document.getElementById('termsPrivacyModal'));
+            modal.show();
+        }
+    }
+    
+    const agreeCheckbox = document.getElementById('agreeTerms');
+    const proceedBtn = document.getElementById('proceedSignup');
+    const modal = document.getElementById('termsPrivacyModal');
+    
+    agreeCheckbox.addEventListener('change', function() {
+        proceedBtn.disabled = !this.checked;
+    });
+    
+    proceedBtn.addEventListener('click', function() {
+        document.getElementById('signupForm').submit();
+    });
+    
+    modal.addEventListener('hidden.bs.modal', function() {
+        agreeCheckbox.checked = false;
+        proceedBtn.disabled = true;
+    });
+    </script>
 </body>
 </html>
